--- a/NinjaGame/Saved/Config/WindowsEditor/SourceControlSettings.ini
+++ b/NinjaGame/Saved/Config/WindowsEditor/SourceControlSettings.ini
@@ -1,5 +1,5 @@
 [SourceControl.SourceControlSettings]
-Provider=Plastic SCM
+Provider=None
 
 [PerforceSourceControl.PerforceSourceControlSettings]
 UseP4Config=False
