--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 /NinjaGame/Content/Asian_Village/
+/NinjaGame/Content/LUSH_StylizedEnvironmentSet/
