--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 /NinjaGame/Content/Asian_Village/
 /NinjaGame/Content/LUSH_StylizedEnvironmentSet/
+/NinjaGame/Content/Fantastic_Village_Pack/
