Basic enemy AI added
Initial behavior tree added acording to the Unreal documentation. Doesn't work because of player tag - need to fix

--- a/NinjaGame/NinjaGame.uproject
+++ b/NinjaGame/NinjaGame.uproject
@@ -10,6 +10,14 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "GameplayStateTree",
+			"Enabled": true
+		},
+		{
+			"Name": "CommonUI",
+			"Enabled": true
 		}
 	]
 }
