--- a/NinjaGame/Saved/Config/WindowsEditor/Engine.ini
+++ b/NinjaGame/Saved/Config/WindowsEditor/Engine.ini
@@ -45,6 +45,9 @@ Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
 Paths=../../../Engine/Plugins/Runtime/WaveTable/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
+Paths=../../../Engine/Plugins/Runtime/CommonUI/Content
+Paths=../../../Engine/Plugins/Runtime/GameplayStateTree/Content
+Paths=../../../Engine/Plugins/Runtime/StateTree/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
