--- a/NinjaGame/Config/DefaultEngine.ini
+++ b/NinjaGame/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=NinjaGame
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/NinjaGame/Maps/TutorialMap.TutorialMap
+EditorStartupMap=/Game/NinjaGame/Maps/TestMap.TestMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/NinjaGame/Maps/TutorialMap.TutorialMap
+GameDefaultMap=/Game/NinjaGame/Maps/TestMap.TestMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/NinjaGame/Core/Blueprints/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
