Capsule Collision on weapon
Added capsule collision to fix problems with line trace. Need to fix it up so that it works properly

--- a/NinjaGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/NinjaGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -393,11 +393,11 @@ GameplayTagsDeveloperSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardS
 LogVisualizerSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SkeletalMeshComponent=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 BP_PlayerCharacter_C=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
-K2Node_VariableGet=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag
+K2Node_VariableGet=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 MulticastInlineDelegatePropertyWrapper=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag
 ABP_Ninja_C=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_PlayerCharacter_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag
 PropertyWrapper=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
-CapsuleComponent=
+CapsuleComponent=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 PrimitiveComponent=Blueprint.Interfaces.Implemented Interfaces
 SceneComponent=StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CapsuleComponent.Collision.Collision,Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
@@ -548,9 +548,13 @@ LastLevel=/Game/NinjaGame/Maps/TestMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -560,11 +564,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -575,6 +575,11 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/NinjaGame/Core/Player/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
+OpenAssetsAtExit=/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10.SK_Blade_HeroSword10
+OpenAssetsAtExit=/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10_Skeleton.SK_Blade_HeroSword10_Skeleton
+OpenAssetsAtExit=/Game/NinjaGame/Characters/Ninja/Ninja.Ninja
+OpenAssetsAtExit=/Game/NinjaGame/Characters/Ninja/Ninja_Skeleton.Ninja_Skeleton
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -583,23 +588,23 @@ InstalledPlugins=WMFCodecs
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NinjaGame/Core/Enemies/BehaviorTrees/BTT_FindPatrol
-MRUItem1=/Game/NinjaGame/Core/Enemies/BehaviorTrees/BT_BasicEnemy
-MRUItem2=/Game/NinjaGame/Core/Player/Blueprints/BP_PlayerCharacter
-MRUItem3=/Game/NinjaGame/Core/Enemies/BP_AIController
-MRUItem4=/Game/NinjaGame/Core/Enemies/BP_Enemy_Basic
-MRUItem5=/Game/NinjaGame/Core/Blueprints/Interactable/BP_Door
-MRUItem6=/Game/NinjaGame/Maps/TestMap
-MRUItem7=/Game/NinjaGame/Core/Macros/ML_Main
-MRUItem8=/Game/NinjaGame/Core/Blueprints/Interfaces/BPI_PlayerEnemyCommunication
-MRUItem9=/Game/NinjaGame/Core/Blueprints/Interfaces/BPI_Interactable
-MRUItem10=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_1_Montage
-MRUItem11=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_2_Montage
-MRUItem12=/Game/NinjaGame/Characters/Ninja/Ninja_Skeleton
-MRUItem13=/Game/NinjaGame/Characters/Ninja/Ninja
-MRUItem14=/Game/NinjaGame/Characters/Ninja/Animations/Stabbing_Montage
-MRUItem15=/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10_Skeleton
-MRUItem16=/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10
+MRUItem0=/Game/NinjaGame/Characters/Ninja/Ninja_Skeleton
+MRUItem1=/Game/NinjaGame/Characters/Ninja/Ninja
+MRUItem2=/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10_Skeleton
+MRUItem3=/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10
+MRUItem4=/Game/NinjaGame/Core/Player/Blueprints/BP_PlayerCharacter
+MRUItem5=/Game/NinjaGame/Core/Enemies/BehaviorTrees/BTT_FindPatrol
+MRUItem6=/Game/NinjaGame/Core/Enemies/BehaviorTrees/BT_BasicEnemy
+MRUItem7=/Game/NinjaGame/Core/Enemies/BP_AIController
+MRUItem8=/Game/NinjaGame/Core/Enemies/BP_Enemy_Basic
+MRUItem9=/Game/NinjaGame/Core/Blueprints/Interactable/BP_Door
+MRUItem10=/Game/NinjaGame/Maps/TestMap
+MRUItem11=/Game/NinjaGame/Core/Macros/ML_Main
+MRUItem12=/Game/NinjaGame/Core/Blueprints/Interfaces/BPI_PlayerEnemyCommunication
+MRUItem13=/Game/NinjaGame/Core/Blueprints/Interfaces/BPI_Interactable
+MRUItem14=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_1_Montage
+MRUItem15=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_2_Montage
+MRUItem16=/Game/NinjaGame/Characters/Ninja/Animations/Stabbing_Montage
 MRUItem17=/Game/NinjaGame/Characters/Ninja/ABP_Ninja
 MRUItem18=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_1
 MRUItem19=/Game/NinjaGame/Characters/Ninja/Animations/Stabbing
@@ -674,6 +679,8 @@ MRUItem26=/Game/Asian_Village/blueprints/BP_wooden_fence_spline
 /Game/NinjaGame/Core/Blueprints/Interfaces/BP_PlayerEnemyCommunication.BP_PlayerEnemyCommunication=0
 /Game/NinjaGame/Core/Blueprints/Interfaces/BPI_Interactable.BPI_Interactable=0
 /Game/NinjaGame/Core/Blueprints/Interfaces/BPI_PlayerEnemyCommunication.BPI_PlayerEnemyCommunication=0
+/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10.SK_Blade_HeroSword10=0
+/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10_Skeleton.SK_Blade_HeroSword10_Skeleton=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2684,6 +2691,7 @@ NavModifierComponent.Events=True
 BP_AIController_C.Navigation=False
 BP_AIController_C.AssetUserData=True
 BP_AIController_C.DataLayers=True
+CapsuleComponent.Mobile=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
