--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /NinjaGame/Content/Asian_Village/
 /NinjaGame/Content/LUSH_StylizedEnvironmentSet/
 /NinjaGame/Content/Fantastic_Village_Pack/
+/NinjaGame/Saved/
+/NinjaGame/Intermediate/
