Work on attack sequence
Removed 3rd attack and made attack buffering more responsive, it doesnt wait untill whole attack animation is finished before starting a new one

--- a/NinjaGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/NinjaGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1676,Y=162)
+NewWindowPosition=(X=462,Y=178)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -130,7 +130,7 @@ LastExecutedLaunchName=DESKTOP-D5HUM28
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=-1676,Y=162)
+MultipleInstancePositions=(X=462,Y=178)
 NewWindowWidth=989
 NewWindowHeight=644
 LastExecutedPlayModeType=PlayMode_InEditorFloating
@@ -424,7 +424,7 @@ BP_wooden_fence_spline_C=StaticMeshActor.Collision.Collision,CapsuleComponent.Co
 SplineComponent=StaticMeshActor.Collision.Collision,CapsuleComponent.Collision.Collision,Blueprint.Interfaces.Implemented Interfaces,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 BP_bridge_spline_C=CapsuleComponent.Collision.Collision,Blueprint.Interfaces.Implemented Interfaces,StaticMeshActor.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values
-BP_Enemy_Basic_C=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
+BP_Enemy_Basic_C=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Actors to Ignore,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 NavMeshBoundsVolume=Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 BrushComponent=CapsuleComponent.Collision.Collision,Blueprint.Interfaces.Implemented Interfaces,BP_Enemy_Basic_C.TransformCommon.Transform,BP_Enemy_Basic_C.Materials.MaterialList,BP_Enemy_Basic_C.Physics.ConstraintsGroup,BP_Enemy_Basic_C.Collision.Collision,BP_PlayerCharacter_C.TransformCommon.Transform,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Tags,PropertyWrapper.DefaultValueCategory.Tag,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 ABP_Enemy_Basic_C=
@@ -558,9 +558,13 @@ ControlPoseDialog.CurrentViewType=1
 LastLevel=/Game/NinjaGame/Maps/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -584,12 +588,9 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
 OpenAssetsAtExit=/Game/NinjaGame/Core/Player/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter
 OpenAssetsAtExit=/Game/NinjaGame/Core/Enemies/BP_AIController.BP_AIController
+OpenAssetsAtExit=/Game/NinjaGame/Core/Enemies/BP_Enemy_Basic.BP_Enemy_Basic
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -598,30 +599,30 @@ InstalledPlugins=WMFCodecs
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NinjaGame/Core/Blueprints/Interfaces/BPI_PlayerEnemyCommunication
-MRUItem1=/Game/NinjaGame/Characters/Ninja/Animations/Stabbing_Montage
-MRUItem2=/Game/NinjaGame/Core/Player/Blueprints/BP_PlayerCharacter
-MRUItem3=/Game/NinjaGame/Core/Enemies/BP_AIController
-MRUItem4=/Game/NinjaGame/Characters/Ninja/Animations/Jumping_Up
-MRUItem5=/Game/NinjaGame/Characters/Ninja/Ninja_Anim
-MRUItem6=/Game/NinjaGame/Characters/Ninja/Ninja_Skeleton
-MRUItem7=/Game/NinjaGame/Characters/Ninja/Ninja
-MRUItem8=/Game/NinjaGame/Characters/Ninja/Ninja_CtrlRig
-MRUItem9=/Game/NinjaGame/Core/Blueprints/StealthSystem/BP_HidingSpot
-MRUItem10=/ControlRig/StandardFunctionLibrary/StandardFunctionLibrary
-MRUItem11=/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10_Skeleton
-MRUItem12=/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10
-MRUItem13=/Game/NinjaGame/Core/Enemies/BehaviorTrees/BTT_FindPatrol
-MRUItem14=/Game/NinjaGame/Core/Enemies/BehaviorTrees/BT_BasicEnemy
-MRUItem15=/Game/NinjaGame/Core/Enemies/BP_Enemy_Basic
-MRUItem16=/Game/NinjaGame/Core/Blueprints/Interactable/BP_Door
-MRUItem17=/Game/NinjaGame/Maps/TestMap
-MRUItem18=/Game/NinjaGame/Core/Macros/ML_Main
-MRUItem19=/Game/NinjaGame/Core/Blueprints/Interfaces/BPI_Interactable
-MRUItem20=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_1_Montage
-MRUItem21=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_2_Montage
-MRUItem22=/Game/NinjaGame/Characters/Ninja/ABP_Ninja
-MRUItem23=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_1
+MRUItem0=/Game/NinjaGame/Core/Enemies/BP_Enemy_Basic
+MRUItem1=/Game/NinjaGame/Core/Enemies/BP_AIController
+MRUItem2=/Game/NinjaGame/Characters/Ninja/Animations/Stabbing_Montage
+MRUItem3=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_2_Montage
+MRUItem4=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_1_Montage
+MRUItem5=/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_1
+MRUItem6=/Game/NinjaGame/Core/Blueprints/Interfaces/BPI_PlayerEnemyCommunication
+MRUItem7=/Game/NinjaGame/Core/Player/Blueprints/BP_PlayerCharacter
+MRUItem8=/Game/NinjaGame/Characters/Ninja/Animations/Jumping_Up
+MRUItem9=/Game/NinjaGame/Characters/Ninja/Ninja_Anim
+MRUItem10=/Game/NinjaGame/Characters/Ninja/Ninja_Skeleton
+MRUItem11=/Game/NinjaGame/Characters/Ninja/Ninja
+MRUItem12=/Game/NinjaGame/Characters/Ninja/Ninja_CtrlRig
+MRUItem13=/Game/NinjaGame/Core/Blueprints/StealthSystem/BP_HidingSpot
+MRUItem14=/ControlRig/StandardFunctionLibrary/StandardFunctionLibrary
+MRUItem15=/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10_Skeleton
+MRUItem16=/Game/NinjaGame/Characters/Ninja/Blade_HeroSword10/SK_Blade_HeroSword10
+MRUItem17=/Game/NinjaGame/Core/Enemies/BehaviorTrees/BTT_FindPatrol
+MRUItem18=/Game/NinjaGame/Core/Enemies/BehaviorTrees/BT_BasicEnemy
+MRUItem19=/Game/NinjaGame/Core/Blueprints/Interactable/BP_Door
+MRUItem20=/Game/NinjaGame/Maps/TestMap
+MRUItem21=/Game/NinjaGame/Core/Macros/ML_Main
+MRUItem22=/Game/NinjaGame/Core/Blueprints/Interfaces/BPI_Interactable
+MRUItem23=/Game/NinjaGame/Characters/Ninja/ABP_Ninja
 MRUItem24=/Game/NinjaGame/Characters/Ninja/Animations/Stabbing
 MRUItem25=/Game/NinjaGame/Core/Enemies/BehaviorTrees/BB_BasicEnemy
 MRUItem26=/Game/NinjaGame/Core/Enemies/BehaviorTrees/BTT_ChasePlayer
@@ -695,6 +696,7 @@ MRUItem27=/Game/NinjaGame/Meshes/SM_Ramp
 /ControlRig/StandardFunctionLibrary/StandardFunctionLibrary.StandardFunctionLibrary=0
 /Game/NinjaGame/Characters/Ninja/Ninja_CtrlRig.Ninja_CtrlRig=0
 /Game/NinjaGame/Characters/Ninja/Animations/Jumping_Up.Jumping_Up=0
+/Game/NinjaGame/Characters/Ninja/Animations/Sword_Attack_2_Montage.Sword_Attack_2_Montage=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -897,8 +899,8 @@ PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
 MovementComponent="\"Object\" "
 BP_PlayerCharacter_C="\"Object\" "
-Character="\"Object\" \"Object.Patrol.PatrolRouteLocal\" "
-Pawn="\"Object\" \"Object.Patrol.PatrolRouteLocal\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 AssetViewerSettings="\"Object\" "
 ABP_Ninja_C="\"Object\" "
@@ -1058,7 +1060,7 @@ EditorAnimSegment="\"Object\" "
 AnimPreviewInstance="\"Object\" "
 AnimSingleNodeInstance="\"Object\" "
 K2Node_SwitchInteger="\"Object\" "
-K2Node_Switch="\"Object\" \"Object.PinOptions.PinNames\" "
+K2Node_Switch="\"Object\" "
 AnimGraphNode_SaveCachedPose="\"Object\" "
 AnimGraphNode_Root="\"Object\" "
 AnimGraphNode_LayeredBoneBlend="\"Object\" \"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" "
@@ -3159,7 +3161,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-1612.000 Y=185.000
+ScreenPosition=X=317.000 Y=157.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -3939,9 +3941,9 @@ LightMixer.TimeStamp=2024.02.15-08.37.30
 LightMixer.LastCompileMethod=External
 PortableObjectFileDataSource.TimeStamp=2024.02.15-08.37.29
 PortableObjectFileDataSource.LastCompileMethod=External
-Bridge.TimeStamp=2024.02.15-09.19.21
+Bridge.TimeStamp=2024.04.08-21.04.48
 Bridge.LastCompileMethod=External
-MegascansPlugin.TimeStamp=2024.02.15-09.19.27
+MegascansPlugin.TimeStamp=2024.04.08-21.04.50
 MegascansPlugin.LastCompileMethod=External
 TakesCore.TimeStamp=2024.02.15-09.02.37
 TakesCore.LastCompileMethod=External
@@ -4284,8 +4286,8 @@ UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
