--- a/NinjaGame 5.4/Config/DefaultGameplayTags.ini
+++ b/NinjaGame 5.4/Config/DefaultGameplayTags.ini
@@ -6,6 +6,7 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagTableList=None
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Dead",DevComment="")
