--- a/NinjaGame 5.4/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/NinjaGame 5.4/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -10,4 +10,10 @@ ManagerState.Dead.Expanded=True
 ManagerState.Expanded=True
 ManagerState.Detected.Expanded=True
 State.Expanded=True
+ManagerPlatform.Expanded=False
+ManagerPlatform.Trait.Expanded=True
+ManagerUI.Expanded=False
+ManagerUI.Action.Expanded=True
+ManagerTest.Expanded=False
+ManagerTest.StateTree.Expanded=True
 
