Poking around with GameplayTags

--- a/NinjaGame 5.4/Config/DefaultGameplayTags.ini
+++ b/NinjaGame 5.4/Config/DefaultGameplayTags.ini
@@ -6,9 +6,7 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
-+GameplayTagTableList=None
++GameplayTagTableList=/Game/NinjaGame/Core/Utilities/GameplayTags/DT_Tags.DT_Tags
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
-+GameplayTagList=(Tag="State.Dead",DevComment="")
-+GameplayTagList=(Tag="State.Detected",DevComment="")
 
