--- a/NinjaGame 5.4/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/NinjaGame 5.4/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -16,4 +16,7 @@ ManagerUI.Expanded=False
 ManagerUI.Action.Expanded=True
 ManagerTest.Expanded=False
 ManagerTest.StateTree.Expanded=True
+Stance.Expanded=True
+Platform.Expanded=False
+Platform.Trait.Expanded=False
 
