--- a/NinjaGame 5.4/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/NinjaGame 5.4/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -19,4 +19,7 @@ ManagerTest.StateTree.Expanded=True
 Stance.Expanded=True
 Platform.Expanded=False
 Platform.Trait.Expanded=False
+Enemy.Expanded=True
+Enemy.Combat.Expanded=True
+Enemy.Stance.Expanded=True
 
